<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#abcdef"
    tools:context=".InstructionFragment">

    <TextView
        android:id="@+id/HowToPlay_text"
        android:layout_width="342dp"
        android:layout_height="131dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="35dp"
        android:fontFamily="serif"
        android:text="@string/how_to_play"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="369dp"
        android:layout_height="158dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/title_underline"
        android:src="@drawable/title_underline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="394dp"
        android:layout_height="615dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Space
                android:layout_width="400dp"
                android:layout_height="16dp" />

            <TextView
                android:id="@+id/matchExplaination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/the_game_will_start_with_an_even_number_of_cards_organized_into_a_grid_of_rows_and_columns_each_card_will_appear_face_down_hiding_the_image_on_the_other_side_to_reveal_the_image_just_tap_on_the_card_the_card_will_then_show_its_hidden_image_you_can_see_at_most_2_cards_hidden_images_if_the_two_cards_hidden_images_match_then_they_will_disappear_and_you_will_get_a_point_for_a_completed_match_if_they_do_not_match_then_they_will_flip_back_over_hiding_their_images_once_again_the_goal_is_to_find_all_matches_as_fast_as_possible_by_memorizing_the_position_of_each_cards_hidden_image_on_the_board"
                android:textColor="#000000"
                android:textSize="25sp" />

            <Space
                android:layout_width="500dp"
                android:layout_height="25dp" />

            <TextView
                android:id="@+id/GameModeHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/game_modes"
                android:textColor="#000000"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/traditionalExplaination"
                android:layout_width="390dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="6dp"
                android:layout_marginBottom="36dp"
                android:text="@string/traditional_mode_will_have_the_user_start_with_a_grid_of_cards_laying_face_down_the_clock_will_then_start_counting_up_the_user_then_will_match_each_card_with_its_pair_until_there_are_no_more_pairs_left_and_the_board_is_empty_the_mode_will_end_displaying_how_fast_the_user_was_able_to_match_all_pairs"
                android:textColor="#000000"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/DifficultyHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/difficulty"
                android:textColor="#000000"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/DifficultyExplaination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/there_are_3_different_levels_of_difficulty"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/on_easy_difficulty_there_will_be_a_total_of_6_cards_on_the_board" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/on_medium_difficulty_there_will_be_a_total_of_12_cards_on_the_board" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/on_hard_difficulty_there_will_be_a_total_of_20_cards_on_the_board" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>