<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="425dp"
        android:layout_height="787dp"
        android:contentDescription="@string/main_screen_background"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@color/teal_200" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="174dp"
        android:layout_marginEnd="178dp"
        android:layout_marginBottom="72dp"
        android:text="@string/version_1"
        android:textColor="#004D40"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:contentDescription="@string/game_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:srcCompat="@drawable/memory_card_game_logo_png" />

    <Button
        android:id="@+id/button2"
        android:layout_width="254dp"
        android:layout_height="79dp"
        android:layout_marginStart="78dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="80dp"
        android:text="@string/Start"
        android:textColor="#1DE9B6"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/created_by_matt_ferretti_isabel_albaitis_and_steve_meadows"
        android:textColor="#004D40"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="305dp"
        android:layout_height="91dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="168dp"
        android:contentDescription="@string/game_edition"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:srcCompat="@drawable/download" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="129dp"
        android:layout_height="41dp"
        android:layout_marginStart="192dp"
        android:layout_marginTop="72dp"
        android:text="@string/edition"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

</androidx.constraintlayout.widget.ConstraintLayout>