<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/finished_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#abcdef"
    tools:context=".FinishedFragment">

    <nl.dionsegijn.konfetti.KonfettiView
        android:id="@+id/konfetti"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/Background"
        android:layout_width="370dp"
        android:layout_height="80dp"
        android:layout_marginTop="35dp"
        android:background="#64A8EC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/konfetti"
        app:layout_constraintTop_toTopOf="@+id/konfetti" />

    <ImageView
        android:id="@+id/yellFinishedScreen"
        android:layout_width="454dp"
        android:layout_height="411dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/yellow_background_behind_main_menu_title"
        android:src="@drawable/yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/completed_time" />

    <TextView
        android:id="@+id/completed_time"
        android:layout_width="384dp"
        android:layout_height="95dp"
        android:layout_marginStart="173dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="134dp"
        android:text="@string/completed_time"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="48sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0_00_00"
        android:textColor="#CD1818"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="@+id/yellFinishedScreen"
        app:layout_constraintEnd_toEndOf="@+id/yellFinishedScreen"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/yellFinishedScreen"
        app:layout_constraintTop_toTopOf="@+id/yellFinishedScreen"
        app:layout_constraintVertical_bias="0.56" />

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="273dp"
        android:layout_height="195dp"
        android:layout_marginStart="83dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="83dp"
        android:contentDescription="@string/sets_screen_back_to_submenu"
        android:src="@drawable/purple_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score" />

    <TextView
        android:id="@+id/back_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_menu"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/back_button"
        app:layout_constraintEnd_toEndOf="@+id/back_button"
        app:layout_constraintStart_toStartOf="@+id/back_button"
        app:layout_constraintTop_toTopOf="@+id/back_button" />

</androidx.constraintlayout.widget.ConstraintLayout>