<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#abcdef"
    tools:context=".SubMenu"
    tools:visibility="visible">

    <ImageView
        android:id="@+id/curtainImage"
        android:layout_width="483dp"
        android:layout_height="387dp"
        android:contentDescription="@string/curtain_background_image"
        android:src="@drawable/curtain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/trad_level_spinner"
        android:layout_width="294dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#000000"
        android:contentDescription="@string/choose_level"
        android:popupBackground="#6ba7e3"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_level_text" />

    <ImageView
        android:id="@+id/Traditional_button"
        android:layout_width="280dp"
        android:layout_height="200dp"
        android:layout_marginStart="83dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="83dp"
        android:contentDescription="@string/sets_screen_back_to_submenu"
        android:src="@drawable/purple_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trad_level_spinner" />

    <ImageView
        android:id="@+id/back_to_main_menu_button"
        android:layout_width="280dp"
        android:layout_height="200dp"
        android:layout_marginStart="83dp"
        android:layout_marginEnd="83dp"
        android:contentDescription="@string/sets_screen_back_to_submenu"
        android:src="@drawable/purple_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Traditional_button"
        app:layout_constraintVertical_bias="0.591" />

    <TextView
        android:id="@+id/traditional_mode_text"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/traditional_mode"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.479" />

    <TextView
        android:id="@+id/time_trial_text"
        android:layout_width="251dp"
        android:layout_height="37dp"
        android:text="@string/back_to_main_menu"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/back_to_main_menu_button"
        app:layout_constraintEnd_toEndOf="@+id/back_to_main_menu_button"
        app:layout_constraintStart_toStartOf="@+id/back_to_main_menu_button"
        app:layout_constraintTop_toTopOf="@+id/back_to_main_menu_button" />

    <TextView
        android:id="@+id/select_level_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_level"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/curtainImage"
        app:layout_constraintVertical_bias="0.20999998" />

    <Button
        android:id="@+id/instructions_button"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginBottom="48dp"
        android:backgroundTint="@color/purple_200"
        android:text="Instructions"
        android:textAlignment="center"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.87"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/submenu_back_button"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginBottom="48dp"
        android:backgroundTint="@color/purple_700"
        android:text="main menu"
        app:cornerRadius="25dp"
        app:iconTint="@color/purple_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>